# AirQualityAnalysis

./: .gitignore  AirQuality.cpp  AirQuality.h  AirQualityAnalyzer.cpp  AirQualityAnalyzer.h  AirQualityUCI.csv  AirQualityUCI_2months.csv  AirQualityUCI_6months.csv  AirQualityUCI_validationSample.csv  CMakeLists.txt  Date.cpp  Date.h  MonthlyData.cpp  MonthlyData.h  README.md  Time.cpp  Time.h  Vector.cpp  Vector.h  VectorLinkedList.cpp  VectorLinkedList.h  main.cpp  testAirQualityAnalyzer.cpp  testDateTimeAirQuality.cpp  testMonthlyData.cpp  testVector.cpp  testVectorAndMonthlyData.cpp  testVectorandMonthlyData.cpp
